; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/png/extr_rpng_encode.c_rpng_save_image_argb.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/png/extr_rpng_encode.c_rpng_save_image_argb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RETRO_VFS_FILE_ACCESS_WRITE = common dso_local global i32 0, align 4
@RETRO_VFS_FILE_ACCESS_HINT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpng_save_image_argb(i8* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %11, align 4
  store i32* null, i32** %12, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32, i32* @RETRO_VFS_FILE_ACCESS_WRITE, align 4
  %15 = load i32, i32* @RETRO_VFS_FILE_ACCESS_HINT_NONE, align 4
  %16 = call i32* @intfstream_open_file(i8* %13, i32 %14, i32 %15)
  store i32* %16, i32** %12, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %12, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @rpng_save_image_stream(i32* %17, i32* %18, i32 %19, i32 %20, i32 %21, i32 4)
  store i32 %22, i32* %11, align 4
  %23 = load i32*, i32** %12, align 8
  %24 = call i32 @intfstream_close(i32* %23)
  %25 = load i32*, i32** %12, align 8
  %26 = call i32 @free(i32* %25)
  %27 = load i32, i32* %11, align 4
  ret i32 %27
}

declare dso_local i32* @intfstream_open_file(i8*, i32, i32) #1

declare dso_local i32 @rpng_save_image_stream(i32*, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @intfstream_close(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
